--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,34 +1,87 @@
-/* Gaya untuk class kustom */
-.custom-class {
-    color: green;
-    font-style: italic;
+body {
+  font-family: "Avenir Next";
 }
 
-/* Gaya untuk tata letak */
-.container {
-    display: flex;
+li {
+  list-style: none;
 }
 
-.sidebar {
-    width: 30%;
-    background-color: lightgray;
+.header {
+  background-color: #26d0c9;
+  color: #fff;
+  height: 90px;
 }
 
-.content {
-    width: 70%;
-    background-color: white;
+.header-logo {
+  float: left;
+  font-size: 36px;
+  padding: 20px 40px;
 }
 
-/* Gaya untuk header dan footer */
-header {
-    background-color: #333;
-    color: white;
-    padding: 20px;
+.header-list li {
+  float: left;
+  padding: 33px 20px;
 }
 
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 10px;
+.main {
+  padding: 100px 80px;
+}
+
+.copy-container h1 {
+  font-size: 140px;
+}
+
+.copy-container h2 {
+  font-size: 60px;
+}
+
+.copy-container span {
+  color: #ff4a4a;
+}
+
+.contents {
+  height: 500px;
+  /* Ganti property margin-top ke 100px */
+  
+}
+
+.section-title {
+  border-bottom: 2px solid #dee7ec;
+  /* Ganti font-size ke 28px */
+  
+  
+  /* Ganti property padding-bottom ke 15px */
+  
+  
+  /* Ganti property margin-bottom ke 50px */
+  
+}
+
+.contents-item {
+  float: left;
+  /* Ganti margin-right ke 40px */
+  
+}
+
+/* Ganti font-size dan margin-top tag <p> yang di dalam contents-item */
+
+
+.footer {
+  background-color: #2f5167;
+  color: #fff;
+  height: 120px;
+  padding: 40px;
+}
+
+.footer-logo {
+  float: left;
+  font-size: 32px;
+}
+
+.footer-list {
+  float: right;
+}
+
+.footer-list li {
+  padding-bottom: 20px;
 }
