--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,288 +1,112 @@
-body {
-  margin: 0;
-  font-family: "Lucida Grande";
-}
+ body {
+            background-image: url('https://i.pinimg.com/originals/88/36/67/8836677fa6ab1092e7efd9e001991539.jpg');
+            background-size: cover; 
+            background-repeat: no-repeat;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-a {
-  text-decoration: none;
-}
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            margin-top: 60px;
+        }
 
-.container {
-  width: 1170px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
+        .header {
+            background-color: rgba(255, 192, 203, 0.8); /* Warna pink dengan tingkat transparansi (alpha) 0.8 */
+            text-align: center;
+            position: fixed; /* Menetapkan header agar tetap di atas layar */
+             width: 100%; /* Lebar header 100% dari layar */
+            top: 0; /* Header akan menempel di bagian atas layar */
+            left: 0;
+            z-index: 100; /* Menetapkan z-index untuk memastikan header ada di atas konten */
+            padding: 5px 0; /* Padding atas dan bawah untuk memberikan jarak pada header */
+        }
 
-.top-wrapper {
-  padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
-  background-size: cover;
-  color: white;
-  text-align: center;
-}
+        .menu {
+            list-style: none;
+            padding: 0;
+        }
 
-.top-wrapper h1 {
-  opacity: 0.7;
-  font-size: 45px;
-  letter-spacing: 5px;
-  margin-bottom: 10px;
-}
+        .menu li {
+            display: inline;
+            margin-right: 20px;
+        }
 
-.top-wrapper p {
-  opacity: 0.7;
-  margin-bottom: 3px;
-}
+        .menu a {
+            text-decoration: none;
+            color: #333;
+            font-weight: bold;
+        }
+        
+        h1 {
+            text-align: center;
+        }
 
-.btn-wrapper {
-  margin: 20px 0;
-}
+        h2 {
+            text-align: left;
+        }
+        
+        p {
+            text-align: left;
+        }
 
-.btn-wrapper p {
-  margin: 10px 0;
-}
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background-color: rgba(255, 255, 255, 0.9); /* Latar belakang tabel dengan transparansi */
+            border-radius: 20px; /* Sudut tumpul untuk pinggiran background tabel */
+        }
 
-.signup {
-  background-color: #239b76;
-}
+        th, td {
+            padding: 2%;
+            text-align: center;
+            border: 1px solid #ccc;
+        }
 
-.facebook {
-  background-color: #3b5998;
-  margin-right: 10px;
-}
+        /* CSS untuk tampilan perangkat seluler */
+        @media (max-width: 767px) {
+        /* Aturan CSS untuk perangkat seluler di sini */
+        .container {
+        padding: 10px; /* Mengurangi padding pada perangkat seluler */
+        }
 
-.twitter {
-  background-color: #55acee;
-}
+        .profile-picture {
+        width: 100px; /* Mengurangi ukuran foto profil pada perangkat seluler */
+        height: 100px;
+        }
 
-.btn {
-  padding: 12px 24px;
-  color: white;
-  display: inline-block;
-  opacity: 0.8;
-  border-radius: 4px;
-}
+        table {
+        font-size: 14px; /* Mengurangi ukuran font pada perangkat seluler */
+        }
+        }
 
-.btn:hover {
-  opacity: 1;
-}
+        /* Mengatur tombol */
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #ff69b4; /* Warna merah muda untuk tombol */
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            margin: 10px;
+        }
 
-.fa {
-  margin-right: 5px;
-}
+        /* Mengatur hyperlink */
+        a {
+            color: #ff69b4; /* Warna merah muda untuk hyperlink */
+            text-decoration: none;
+        }
 
-header {
-  height: 65px;
-  width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
-  /* Ubah position ke fixed, dan top ke 0 */
-  position: fixed;
-  top: 0;
-  /* Ubah z-index ke 10 */
-  z-index: 10;
-}
+        /* Mengatur tombol ketika dihover */
+        .button:hover {
+            background-color: #ff3385; /* Warna merah muda yang lebih terang saat tombol dihover */
+        }
 
-.logo {
-  width: 124px;
-  margin-top: 20px;
-}
-
-.header-left {
-  float: left;
-}
-
-.header-right {
-  float: right;
-  background-color: rgba(255, 255, 255, 0.3);
-  transition: all 0.5s;
-}
-
-.header-right:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-.header-right a {
-  line-height: 65px;
-  padding: 0 25px;
-  color: white;
-  display: block;
-}
-
-.lesson-wrapper {
-  height: 500px;
-  padding-bottom: 80px;
-  background-color: #f7f7f7;
-  text-align: center;
-}
-
-.heading {
-  padding-top: 60px;
-  padding-bottom: 30px;
-  color: #5f5d60;
-}
-
-.heading h2 {
-  font-weight: normal;
-}
-
-.lesson {
-  float: left;
-  width: 25%;
-}
-
-.lesson-icon {
-  position: relative;
-}
-
-.lesson-icon p {
-  position: absolute;
-  top: 90px;
-  width: 100%;
-  color: white;
-}
-
-.txt-contents {
-  width: 80%;
-  display: inline-block;
-  margin-top: 20px;
-  font-size: 15px;
-  color: #b3aeb5;
-}
-
-.heading h3 {
-  font-weight: normal;
-}
-
-.message-wrapper {
-  border-bottom: 1px solid #eee;
-  background-color : rgb(194, 242, 248);
-  padding-bottom: 80px;
-  text-align: center;
-}
-
-.message {
-  padding: 15px 40px;
-  background-color: #5dca88;
-  cursor: pointer;
-  box-shadow: 0 7px #1a7940;
-}
-
-.message:active {
-  position: relative;
-  top: 7px;
-  box-shadow: none;
-}
-
-footer img {
-  width: 125px;
-}
-
-footer p {
-  color: #b3aeb5;
-  font-size: 12px;
-}
-
-footer {
-  padding-top: 30px;
-}
-
-body {
-  font-family: "Avenir Next";
-}
-
-li {
-  list-style: none;
-}
-
-.header {
-  background-color: #26d0c9;
-  color: #fff;
-  height: 90px;
-}
-
-.header-logo {
-  float: left;
-  font-size: 36px;
-  padding: 20px 40px;
-}
-
-.header-list li {
-  float: left;
-  padding: 33px 20px;
-}
-
-.main {
-  padding: 100px 80px;
-  background-color: rgb(151, 201, 247);
-}
-
-.copy-container h1 {
-  font-size: 140px;
-}
-
-.copy-container h2 {
-  font-size: 60px;
-}
-
-.copy-container span {
-  color: #ff4a4a;
-}
-
-.contents {
-  height: 500px;
-  margin-top: 100px;
-}
-
-.section-title {
-  border-bottom: 2px solid #dee7ec;
-  font-size: 28px;
-  padding-bottom: 15px;
-  margin-bottom: 50px;
-}
-
-.contents-item {
-  float: left;
-  margin-right: 40px;
-}
-
-.contents-item p {
-  font-size: 24px;
-  margin-top: 30px;
-}
-
-.contact-form {
-  padding-top: 100px;
-}
-
-input, textarea {
-  width: 400px;
-  margin-top: 10px;
-  margin-bottom: 30px;
-  padding: 20px;
-  font-size: 18px;
-  border: 1px solid #dee7ec;
-}
-
-.contact-submit {
-  background-color: #dee7ec;
-  color: #889eab;
-}
-
-.footer {
-  background-color: #2f5167;
-  color: #fff;
-  height: 120px;
-  padding: 40px;
-}
-
-.footer-logo {
-  float: left;
-  font-size: 32px;
-}
-
-.footer-list {
-  float: right;
-}
-
-.footer-list li {
-  padding-bottom: 20px;
-}
+        .profile-picture {
+            display: block;
+            margin: 0 auto 20px; /* Memberikan margin bawah supaya tidak terlalu rapat dengan judul */
+            border-radius: 50%; /* Mengatur foto profil menjadi lingkaran */
+            width: 200px; /* Sesuaikan dengan ukuran foto profil Anda */
+            height: 200px; /* Sesuaikan dengan ukuran foto profil Anda */
+        }
